--- a/function/pyproject.toml
+++ b/function/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "aws-lambda-powertools>=3.5.0",
+    "aws-lambda-powertools[parser]>=3.5.0",
     "boto3>=1.36.16",
     "types-boto3[essential]>=1.36.16",
 ]
