implement session functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.analysis.exclude": ["${workspaceFolder}/dist"]
+  "python.analysis.exclude": ["${workspaceFolder}/dist"],
+  "python.analysis.typeCheckingMode": "off"
 }
